--- a/Session6/Excercise2.html
+++ b/Session6/Excercise2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Excercise2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -12,7 +13,10 @@
         <h1>2019 Best IT Companies in Vietnam</h1>
     </div>
     <div id="table">
-        <table>
+        <table style=" border: 1px;
+        border-color: gray;
+        border-style: groove;
+        margin: 10px;">
             <thead>
                 <th>Company Name</th>
                 <th>Rating(out of 5)</th>
