--- a/Session8/Session7Homework/10-11-12.html
+++ b/Session8/Session7Homework/10-11-12.html
@@ -17,6 +17,8 @@
     <input type="text" class='data' placeholder="Enter task" id="task">
     <input type="number" class='data' placeholder="Time spent" id="time">
     <button id="add">Add</button>
+    <button id="clear">Clear</button>
+    <button id = "updateButton">Update</button>
     <table id="myTable">
         <thead>
             <th>Project</th>
@@ -25,12 +27,7 @@
             <th>Action</th>
         </thead>
         <tbody id="ts_tbody">
-            <tr id="tr">
-                <td>Project Test 1</td>
-                <td>Task test 1</td>
-                <td>0</td>
-                <td></td>
-            </tr>
+
         </tbody>
     </table>
 
